--- a/src/components/Layout/Navigation.module.scss
+++ b/src/components/Layout/Navigation.module.scss
@@ -7,6 +7,7 @@
   border-bottom: 0.1rem solid variables.$color-grayish-blue;
   display: flex;
   min-height: 7rem;
+  position: relative;
 
   justify-content: space-between;
 
