--- a/src/sass/base/_animations.module.scss
+++ b/src/sass/base/_animations.module.scss
@@ -32,3 +32,21 @@
     opacity: 0;
   }
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
